# competitive_programming

./: .gitignore  1011.cpp  1013.cpp  1014.cpp  OfferFit Python Assignment 3.py  README.md  Test_1_input.txt  a.out  app  app.cpp  basic_sctruture.cpp  beu  handsome  lindo  lindo.cpp  lindo3  lindo3.cpp  lindoso.cpp  lol  lol.cpp  test.cpp  test.py  testador.py  teste.cpp  testes.cpp  testes.py
arrays/: first_and_last_element.py  lindo  maximum_minimum.cpp  reverse_array.cpp  reverse_array.py
ativdades/: atividade4.cpp
blockchain/: app.cpp
codechef/: 1517A.cpp  ACCURACY.cpp  ACS.cpp  ACTEMP.cpp  AIRLINE.cpp  AMR15A.cpp  AREAPERI.cpp  ATM.cpp  ATM2.cpp  AVGPROBLEM.cpp  AddTwoNumbers.cpp  BOBBANK.cpp  (+102 more)
hack-bitcoin-bitcoin-django-backend-main/: .gitignore  Makefile  README.md  catalog-info.yaml  package.json  poetry_ci.py  pyproject.toml  setup.cfg
hack-bitcoin-bitcoin-django-backend-main/.github/: CODEOWNERS  dependabot.yml
hack-bitcoin-bitcoin-django-backend-main/.github/workflows/: standard.yaml
hack-bitcoin-bitcoin-django-backend-main/.scafflater/: scafflater.jsonc
hack-bitcoin-bitcoin-django-backend-main/dockerfiles/: .dockerignore  Dockerfile
hack-bitcoin-bitcoin-django-backend-main/kube/prd/: app.yaml  infra.yaml
hack-bitcoin-bitcoin-django-backend-main/src/: manage.py  newrelic.ini  pytest.ini
hack-bitcoin-bitcoin-django-backend-main/src/bitcoin_django_backend/: asgi.py  urls.py  wsgi.py
hack-bitcoin-bitcoin-django-backend-main/src/bitcoin_django_backend/healthcheck/: enums.py  serializers.py  urls.py  views.py
hack-bitcoin-bitcoin-django-backend-main/src/bitcoin_django_backend/healthcheck/tests/: test_views.py
hack-bitcoin-bitcoin-django-backend-main/src/bitcoin_django_backend/index/: views.py
hack-bitcoin-bitcoin-django-backend-main/src/bitcoin_django_backend/settings/: base.py
(+235 files in other folders)
